# training-planner

./: .gitignore
backend/: DATABASE_README.md  Planning.md  check_db_connection.py  main.py  pyproject.toml  users.py
backend/api/: calendar_router.py  planner_router.py  user_router.py
backend/database/: crud.py  database.py  init_db.py  models.py  schemas.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: Calendar.tsx  EventCreate.tsx  GeneratePlan.tsx  Header.tsx
frontend/src/components/elements/: EventModal.tsx  TimeSlot.tsx
frontend/src/config/: api.ts
frontend/src/context/: CalendarContext.tsx
frontend/src/data/: schemas.ts  schemas.tsx
frontend/src/hooks/: useCalendarEvents.ts
frontend/src/utils/: calendarUtils.ts
